// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ledger configuration it renders busy error in the UI correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Is your Ledger device locked or busy?
      </p>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders connectedFailure ledger error in the UI correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Is your Ledger device plugged in?
      </p>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  background-color: transparent;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #262626;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #262626;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c5 {
  width: 40px;
  height: 40px;
}

.c12 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.125rem;
}

.c12:hover {
  border-bottom: 2px solid #5E26FF;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="#000"
          display="flex"
          size="6"
        >
          <svg
            class="c5"
            fill="none"
            height="40px"
            viewBox="0 0 24 24"
            width="40px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
              fill="#333333"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="core.nearblack"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Unlock & Open
      </h2>
    </div>
    <div
      class="c10"
      color="core.nearblack"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Please unlock your Ledger device and open the Filecoin App
      </p>
      <a
        class="c12"
        color="core.primary"
        font-size="2"
        href="https://reading.supply/@glif/install-the-filecoin-app-on-your-ledger-device-y33vhX"
        rel="noopener noreferrer"
        target="_blank"
      >
        Click here for installation instructions.
      </a>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders filecoinAppNotOpen error in the UI correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Is the Filecoin App open on your Ledger device?
      </p>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders inUseByAnotherApp ledger error correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Please quit any other App using your Ledger device.
      </p>
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        (Most of the time, this is Ledger Live!)
      </p>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders locked ledger error correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Is your Ledger device unlocked?
      </p>
    </div>
  </div>
</div>
`;

exports[`Ledger configuration it renders replug error correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FC6D6F;
  padding: 16px;
  background-color: #FC6D6F;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 160px;
  overflow: hidden;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  background-color: #FC6D6F;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  width: 8px;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  border-color: silver;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 160px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 16px;
  color: #660000;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c9 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c11 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c1 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0"
  display="inline-block"
  overflow="hidden"
  width="100%"
>
  <ul
    class="c1"
    display="flex"
    width="100%"
  >
    <div
      class="c2"
      display="flex"
    >
      <li
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          color="status.fail.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Er
          </h3>
        </div>
      </li>
      <div
        class="c6"
        width="2"
      />
      
    </div>
  </ul>
  <div
    class="c7"
    display="flex"
    width="100%"
  >
    <div
      class="c8"
      color="status.fail.foreground"
      display="flex"
    >
      <h2
        class="c9"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Oops!
      </h2>
    </div>
    <div
      class="c10"
      color="status.fail.foreground"
    >
      <p
        class="c11"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Please quit the Filecoin app, and unplug/replug your Ledger device, and try again.
      </p>
    </div>
  </div>
</div>
`;
